# OpenGlShaderToy

./: CMakeLists.txt  README.md
includes/: compute_shader.hpp  shader.hpp  utils.hpp
libs/: CMakeLists.txt
shaders/neon/: neon.frag.glsl
shaders/neon_noise/: frag.glsl
shaders/prime/: prime.comp.glsl  prime.frag.glsl
shaders/torus/: torus.frag.glsl  torus.vert.glsl
shaders/wormy/: wormy.frag.glsl
src/: main.cpp
